# ChangeLog for app-misc/delay
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/delay/ChangeLog,v 1.14 2007/02/08 22:29:10 flameeyes Exp $

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> delay-1.6.ebuild:
  stable on amd64

  31 Oct 2004; Ciaran McCreesh <ciaranm@gentoo.org> delay-1.6.ebuild:
  Stable on sparc, mips

  21 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  update metadata (no-herd => shell-tools)

  19 Sep 2004; Tom Gall <tgall@gentoo.org> delay-1.6.ebuild:
  stable on ppc64, bug #63662

  28 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> delay-1.6.ebuild:
  Added ~sparc, ~mips

  19 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> delay-1.6.ebuild:
  Marked ~amd64 and added "#include <stdlib.h>" to delay.c. W/o it, gcc-3.4
  complains about missing declaration.

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  delay-1.6.ebuild:
  QA - IUSE fix

  14 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> delay-1.6.ebuild:
  Don't assign default to S; header fix

*delay-1.6 (02 Jul 2002)
  
  07 Aug 2002; Calum Selkirk <cselkirk@gentoo.org> delay-1.6.ebuild :

  Added ppc to KEYWORDS.
  
  1 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> app-misc/delay:
  Moved from sys-apps

  14 Jul 2002; phoen][x <phoenix@gentoo.org> delay-1.6.ebuild :
  Added KEYWORDS.

  02 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> delay-1.6.ebuild :

  New package. Delay is a sleeplike program. 
  Ebuild initially written by Richard Stevens <mail@richardstevens.de>
  Corrected, slotified, dodoc for README, INSTALL and ChangeLog was added.  
	   