@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/delay/delay-1.6.ebuild,v 1.15 2005/04/21 19:09:32 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/delay/delay-1.6.ebuild,v 1.16 2008/03/26 18:47:31 armin76 Exp $
 
 DESCRIPTION="sleeplike program that counts down the number of seconds specified"
 HOMEPAGE="http://onegeek.org/~tom/software/delay/"
@@ -8,7 +8,7 @@ SRC_URI="http://onegeek.org/~tom/software/delay/dl/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ppc sparc mips amd64 ppc64"
+KEYWORDS="amd64 ~ia64 mips ppc ppc64 sparc x86"
 IUSE=""
 
 DEPEND="virtual/libc"
