@@ -1,7 +1,5 @@
 AUX glastree-posix-make.patch 559 RMD160 6f10286f710084b2808408fc02d51d0211bd81f6 SHA1 2e7bc65a14193bf2b1934bf2cef2891f1d1acd53 SHA256 16cbd62f5fe9028c24948cb63894c901023e7323cf8f4150b9d8f06642be3d36
-DIST glastree-1.02.tar.gz 5717 RMD160 254e57c3111d2e5f659a21ea90a25d6a239a8abb SHA1 96ee711eb22b594dc49e9a617a8be16ded5077b7 SHA256 91daa5a04f1bbfed15da08ab4fd348fa0225b035593711007f4b06d09b6adc1c
 DIST glastree-1.04.tar.gz 5846 RMD160 bb45ee731fc20a791c06f6303c0f4f91380d857a SHA1 1b0a5066d56b0b2aa4b17b41e4b0d90f4981ba2b SHA256 067d01d98ae155f1fa1ba25a27dd72d27d4455d71107c3e6e6f1cdc41a0e0fd3
-EBUILD glastree-1.02.ebuild 638 RMD160 dd22fe76404b60ed2b722817b5734034064d4128 SHA1 63be9dcfd8bed0e76b06c77b8271bd8b799167d6 SHA256 724d728a19569072428569221259e6e9a7524100db1da9861b0be14d9faea694
 EBUILD glastree-1.04.ebuild 739 RMD160 e0497915b1294a45f10a1b8eb5c77e6d97896dfb SHA1 543ce98a088d961a8706596c37c54a5269358d92 SHA256 84c7ecaca96346abb2ed4a90548415a1a3be8da619e31836ca21e02681052944
 MISC ChangeLog 1764 RMD160 e706d0af197efbf14239642db051cd0c2bc44825 SHA1 09cc31d44fa7f0e90ef312acb270980078d211df SHA256 eb1717565bb57cf311c1d2c1321d57b8b81a7320022efbbf1f5c315456d83f28
 MISC metadata.xml 250 RMD160 61af8ec7e1bf9941d107eff4cc6a639874a6f198 SHA1 7ea68a3bd071637e4a49b61b2f7e35f3277545ef SHA256 aec181c304bce77cce8f1dc110e0203bc06b7c524ab40b1aac19a6f72aefdfde
